[tool.poetry]
name = "form-template"
version = "0.1.0"
description = ""
authors = ["tokin_nikita <nikitatokin2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic-settings = "^2.6.1"
phonenumbers = '8.13'
pydantic-extra-types = "^2.10.1"
motor = "^3.6.0"
pydantic = {extras = ["email"], version = "^2.10.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
